--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+# CPU версия (работает везде, но медленнее)
 numpy>=1.24.0
 pandas>=2.0.0
 stable-baselines3>=2.0.0
 gymnasium>=0.29.0
 matplotlib>=3.7.0
-torch>=2.0.0 
+
+# PyTorch CPU версия
+torch>=2.0.0+cpu --index-url https://download.pytorch.org/whl/cpu
+
+# Для установки GPU версии используйте:
+# pip install -r requirements-gpu.txt 
