--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,7 @@ tqdm>=4.62.0
 seaborn>=0.11.0  # Для улучшенной визуализации
 
 # Для установки GPU версии используйте:
-# pip install -r requirements-gpu.txt 
+# pip install -r requirements-gpu.txt
+
+# Для работы с криптобиржами
+ccxt>=4.0.0 
